--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -1922,12 +1922,48 @@ body {
   margin: 0 auto;
   width: 100%; }
 
+.padme {
+  padding: 0 8% 0 8%; }
+
+.site__content {
+  margin-top: 1.5em; }
+
+.video-container {
+  height: 0;
+  padding-bottom: 75%;
+  max-width: 100%;
+  position: relative;
+  overflow: hidden;
+  z-index: 1; }
+
+.video-container iframe, .video-container embed, .video-container object {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%; }
+
+@media only all and (min-width: 41em) {
+  .padme {
+    padding: 0 5% 0 5%; } }
+
 @media only all and (min-width: 56em) {
   .container {
-    margin: 0 auto;
-    padding: 0;
-    width: 100%;
     max-width: 80em; } }
+
+@media only all and (min-width: 79em) and (max-width: 88.75em) {
+  .padme {
+    padding: 0;
+    width: 90%; }
+  .site__content {
+    margin-top: 2em; } }
+
+@media only all and (min-width: 88.75em) {
+  .padme {
+    padding: 0;
+    width: 100%; }
+  .site__content {
+    margin-top: 2em; } }
 
 .pattern {
   background: url(../../assets/pattern.png);
